# cgcpp

./: .dockerignore  .gitignore  Dockerfile  README.md  build.bat  build_plugin.py  cgcpp.code-workspace  noxfile.py  package.json  pyproject.toml  retag.sh  setup.py
.github/workflows/: build-wheels-test.yml  build-wheels.yml  docker-image.yml
cmake/: FindUSD.cmake  build_functions.cmake  compiler.cmake  init-config.cmake  maya-config.cmake
examples/source_exception/: CMakeLists.txt  lib_exception.cpp
examples/source_houdini/: CMakeLists.txt  houdini_module.cpp
examples/source_maya/: CMakeLists.txt  maya_module.cpp
source/cgcpp/: __init__.py  __main__.py  build.py
source_lib_loader/: CMakeLists.txt  lib_loader.cpp
