[project]
dependencies = []
name = "cgcpp"
version = "1.8.2"
description = "CG C++ Support module"
authors = [{ name = "Andriy Babak", email = "ababak@gmail.com" }]
license = "Apache-2.0"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/ababak/cgcpp"
Repository = "https://github.com/ababak/cgcpp.git"

[build-system]
requires = ["setuptools>=61.0", "wheel", "build", "toml"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["source"]

# [tool.setuptools.package-data]
# "*" = ["*.*"] # <-- this changed
